[package]
name = "smartwatch-client"
version = "0.1.0"
edition = "2021"  

[dependencies]
solana-client = "1.16.4"
solana-sdk = "1.16.4"
solana-program = "1.16.4"
aes = "0.7.5"               # 'cipher' 0.4 ile uyumlu sürüm
block-modes = "0.8.1"       # 'cipher' 0.4 ile uyumlu sürüm
hex-literal = "0.3.1"
dotenv = "0.15.0"
base64 = "0.21" # En son kararlı sürüm


